# elmo

./: can_receiver.cpp  messages(12)(9)  mpo700_neobotix_ws_.14octendevep  statemachine(7).drawio  statemachine(9)(14).drawio
mpo700_neobotix_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
mpo700_neobotix_ws/devel/include/neo_kinematics_omnidrive/: Homing.h  HomingRequest.h  HomingResponse.h
mpo700_neobotix_ws/devel/lib/can_socket_virtual/: can_receiver  sender
mpo700_neobotix_ws/devel/lib/neo_kinematics_omnidrive/: neo_kinematics_omnidrive_node
mpo700_neobotix_ws/devel/lib/pkgconfig/: can_socket_virtual.pc  neo_kinematics_omnidrive.pc
mpo700_neobotix_ws/src/neo_kinematics_omnidrive/: CMakeLists.txt
mpo700_neobotix_ws/src/neo_kinematics_omnidrive/launch/: mpo_700_CanCtrl.yaml
mpo700_neobotix_ws/src/neo_kinematics_omnidrive/src/: DriveModule.cpp  ElmoMotorCtrl.cpp  SocketCan.cpp  neo_kinematics_omnidrive.cpp
socketcan_elmo_ws/devel/: .catkin  .rosinstall  setup.sh
socketcan_elmo_ws/devel/lib/cob_canctrl/: cob_canctrl_node  cobcanctrl
socketcan_elmo_ws/src/cob_canctrl/: CMakeLists.txt  package.xml
socketcan_elmo_ws/src/cob_canopen_motor/: CMakeLists.txt
socketcan_elmo_ws/src/cob_generic_can/: CMakeLists.txt
socketcan_elmo_ws/src/cob_generic_can/common/include/cob_generic_can/: CanItf.h  CanItff.h  cansocketdriver.h  cansocketreceiver.h
socketcan_elmo_ws/src/cob_generic_can/common/src/: cansocketdriver.cpp  cansocketreceiver.cpp
socketcan_elmo_ws/src/cob_socket_can/: CMakeLists.txt  package.xml
(+36 files in other folders)
